--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Hyeonjeong Shin"
   avatar           : "/assets/images/profile.jpg"
-  bio              : "Machine Learning Engineer"
+  bio              : "ML/AI research engineer"
   location         : "Samsung Research, Seoul"
   email            : "hyeonjeong1@gmail.com"
   links:
